# scgicxx

./: CMakeLists.txt  README.MD
src/: http_request.cpp  http_response.cpp  scgi_protocol_parser.cpp  server.cpp  server_pool.cpp
src/detail/: detail.cpp
src/examples/: CMakeLists.txt  example.cpp
src/include/: http_request.hpp  http_response.hpp  scgi_protocol_parser.hpp  server.hpp  server_pool.hpp
src/include/detail/: array_view.hpp  detail.hpp  string_view.hpp
src/include/logging/: abstract_logger.hpp  console_logger.hpp  level_enum.hpp  logger.hpp  message.hpp
src/logging/: abstract_logger.cpp  console_logger.cpp  logger.cpp  message.cpp
src/test/: CMakeLists.txt  main.cpp
